# db2api-service

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: deploy-pages.yml
db2api_service/: config.py  main.py  schema_registry.py
tests/: test_dynamic_api.py
