[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db2api-service"
version = "0.1.0"
description = "Dynamic CRUD microservice that reflects database tables and adapts to schema changes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "SQLAlchemy>=2.0,<3.0",
    "pydantic-settings>=2.7,<3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4,<9.0",
    "httpx>=0.28,<1.0",
]
postgres = ["psycopg[binary]>=3.2,<4.0"]
postgresql = ["psycopg[binary]>=3.2,<4.0"]
mysql = ["PyMySQL>=1.1,<2.0"]
sqlserver = ["pyodbc>=5.1,<6.0"]
all-relational = [
    "psycopg[binary]>=3.2,<4.0",
    "PyMySQL>=1.1,<2.0",
    "pyodbc>=5.1,<6.0",
]

[project.scripts]
db2api-service = "db2api_service.main:run"

[tool.setuptools.packages.find]
include = ["db2api_service*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
